FIX: Read only multiline fields in grids displayed horizontal scrollbar on column overflow
the scroll bar filled the field and the value was not visible

--- a/src/gui/Components/ScreenElements/Editors/TextEditor.module.scss
+++ b/src/gui/Components/ScreenElements/Editors/TextEditor.module.scss
@@ -2,7 +2,19 @@
 
 .input {
   @include input;
+  overflow-x: hidden;
+}
+
+.scrollY{
   overflow-y: auto;
+}
+
+.noScrollY{
+  overflow-y: hidden;
+}
+
+.wrapText{
+  overflow-wrap: anywhere;
 }
 
 .multiLine{
